--- a/GestorDeTareasMelbar/appsettings.json
+++ b/GestorDeTareasMelbar/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=MelbarDB;User=root;Password=root;"
+    "DefaultConnection": "Server=localhost;Database=MelbarDB;User=root;Password=DUCKY;"
   }
 }
